# Analyze-Data-App

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py  config.py  models.py  routes.py  service.py  validation.py
backend/instance/: experiments.db  my_db.db
frontend/: package-lock.json
frontend/src/: App.css  App.js
samples/: zeta_valid.csv
