[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic==1.14.1",
    "blinker==1.9.0",
    "click==8.1.8",
    "fastexcel==0.12.1",
    "flask==3.1.0",
    "flask-cors==5.0.0",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "mako==1.3.8",
    "markupsafe==3.0.2",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "polars==1.20.0",
    "pyarrow==19.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "six==1.17.0",
    "sqlalchemy==2.0.37",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "werkzeug==3.1.3"
]
